# cometbeat

./: .gitignore  .last_build_id  PLAN.md  README.md  flutter_bootstrap.js  pubspec.yaml  vercel.json
assets/: AssetManifest.bin.json  NOTICES
bench/: README.md
docs/: AEC_TIER3B.md  CC0_SAMPLE_SOURCE_HANDOFF.md  CORPUS_LICENSING.md  FDN_REVERB_SPEC.md  FX_HANDOVER.md  HISTORY.md  LIBRARIES_AND_TAB_SCOPING.md  LOOP_MIXER_HANDOVER.md  OMR_ONNX_HANDOVER.md  ORACLE.md  PDMX_JSON_TO_MIDI_HANDOVER.md  PLAN.md  REPLAYER_EFFECT_COVERAGE.md  SOUND_AND_DAW_ROADMAP.md  SOUND_LIBRARY_UI_CONTRACT.md  SVC_SITE_B_HANDOVER.md  TABCNN_GGML_HANDOVER.md  TAB_ARRANGER_NEURAL_HANDOFF.md  TAB_LABELER_ROADMAP.md  TAB_SYMBOLIC_LABELER_HANDOVER.md  TRACKER_GUI_HANDOFF_IDEAS.md  TRACKER_HANDOVER.md  TRACKER_IDEAS.md  TRANSCRIPTION_CRISPASR_STATUS.md  TRANSCRIPTION_HANDOFF.md  TRANSCRIPTION_HARMONY_HANDOVER.md  TRANSCRIPTION_SCOPING.md  TRANSCRIPTION_SOTA_HANDOFF.md  WORKSHOP_CRISP_NOTATION_CONTRACTS.md  WORKSHOP_NEXT_HANDOVER.md  WORKSHOP_PARITY.md  WORKSHOP_PARTITURA_CONTRACTS.md  WORKSHOP_PLAN.md
integration_test/: app_smoke_test.dart  screenshots_test.dart  workshop_test.dart
lib/: main.dart
linux/: CMakeLists.txt
native/glint/linux/: CMakeLists.txt
native/glint/src/: CMakeLists.txt  flac_c_api.cpp  glint_free_shim.cpp
native/glint/src/glint/: glint.h
test/: about_screen_test.dart  accidental_sort_test.dart  advanced_tracker_screen_test.dart  aec_capability_test.dart  aec_offline_test.dart  aec_tune_test.dart  articulation_read_test.dart  audio_export_test.dart  audio_import_test.dart  beam_flag_test.dart  beat_capture_test.dart  beat_runner_test.dart  beat_sort_test.dart  bowing_test.dart  build_info_test.dart  (+264 more)
(+412 files in other folders)
